configmap-mount-volume-pod-spec.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-config-map
  labels:
    role: web
spec:
  containers:
    - name: nginx-config-map
      image: nginx
      volumeMounts:
        - name: conf
          mountPath: /etc/nginx/conf.d
  volumes:
    - name: conf
      configMap:
        name: nginx-cm 
        items:
          - key: nginx-custom-config.conf
            path: default.conf
