configmap-pod-spec.yaml
apiVersion: v1
kind: Pod
metadata:
  name: config-map
spec:
  containers:
    - name: config-map
      image: cirros
      command: ["/bin/sh", "-c", "env"]
