init-container-spec.yaml
kind: Pod
apiVersion: v1
metadata:
  name: init-example
spec:
  containers:
    - name: web
      image: nginx
