probes-nginx-spec.yaml
apiVersion: v1
kind: Pod
metadata:
  name: probes-nginx
  labels:
    role: web
spec:
  containers:
    - name: probes-nginx
      image: nginx
      readinessProbe:
        tcpSocket:
          port: 80
        initialDelaySeconds: 5
        periodSeconds: 10
      livenessProbe:
        tcpSocket:
          port: 80
        initialDelaySeconds: 10
        periodSeconds: 20
