readiness-prod-side-car-container.yaml
kind: Pod
apiVersion: v1
metadata:
  name: ready-to-go
spec:
  containers:
    - name: web
      image: nginx
      ports:
        - containerPort: 80
    - name: app
      image: busybox
      readinessProbe:
        tcpSocket:
          port: 80
        initialDelaySeconds: 10
        periodSeconds: 10
      command: ['sleep', '3600']
