readiness-prod-spec.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-ready
spec:
  containers:
    - name: busy
      image: busybox
      command:
        - sleep
        - "3600"
      readinessProbe:
        periodSeconds: 10
        exec:
          command:
            - cat
            - /tmp/nothing
      resources: {}
