secret-pod-spec.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secretbox
spec:
  containers:
    - name: secretbox
      image: busybox
      command:
        - sleep
        - "3600"
      volumeMounts:
        - mountPath: /secretstuff
          name: secret
  volumes:
    - name: secret
      secret:
        secretName: secretstuff
