security-context-spec.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginxsecure
spec:
  securityContext:
    runAsNonRoot: true
  containers:
    - image: nginx
      name: nginx
