sleepy-pod-spec.yaml
kind: Pod
apiVersion: v1
metadata:
  name: sleepy
spec:
  containers:
    - name: sleep-container
      image: alpine
      command: ["/bin/sh"]
      args: ["-c", "while true; do date; sleep 5; done"]
