service-nginx-spec.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywebserver
spec:
  selector:
    run: nginx-deployment
  ports:
  - port: 80
    name: whatever
  type: NodePort
