ingress-spec.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host:
      ingress.example.com
    http:
      paths:
      - path: /testpath
        backend:
          serviceName: nginx
          servicePort: 80
